ui updates, added signups

--- a/index.html
+++ b/index.html
@@ -101,35 +101,36 @@
       <!-- /END: Features List -->
     </section>
 
-    <!-- <section id="help" class="site-section section-signup">
+    <section id="help" class="site-section section-signup">
       <div class="row">
         <div class="twelve columns animate-on-scroll" data-scrollanimation="fadeDownIn">
-          <h3 class="signup-title">Join the Adventure!</h3>
-          <h4 class="signup-subtitle">Want to have another NodeSchool in Berlin? Help planing it or show interest at GitHub.</h4>
-         <h4 class="signup-subtitle">The next NodeSchool will be on April 20th at Project-A</h4>
+            <h3 class="signup-title">Questions? Want to help out?</h3>
+            <h4 class="signup-subtitle">Just open an issue on <a href="https://github.com/nodeschool/stlouis/issues">GitHub</a> and join the discussion.</h4>
+              <p> If you are not on GitHub yet, create a <a href="https://github.com/join">free account</a> and check out the <a href="http://nodeschool.io/#git-it">Git-it</a> workshop. It will
+              help you to get started.</p>
         </div>
       </div>
       <div class="row">
         <div class="eight columns centered">
           <div class="signup-form">
-            <a href="https://ti.to/nodeschool-berlin/6" class="btn-side animate-on-scroll" data-scrollanimation="fadeInLeft"><i class="icon-ticket"></i> Sign up!</a>
-            <a href="https://github.com/nodeschool/berlin/issues/21" class="btn-side animate-on-scroll" data-scrollanimation="fadeInLeft"><i class="icon-rocket"></i> Join us</a>
+            <a href="http://meetup.com/STL-NodeSchool" class="btn-side animate-on-scroll" data-scrollanimation="fadeInLeft"><i class="icon-ticket"></i> Join Us</a>
+            <a href="https://github.com/nodeschool/stlouis/issues" class="btn-side animate-on-scroll" data-scrollanimation="fadeInLeft"><i class="icon-rocket"></i> Ask Questions</a>
           </div>
         </div>
       </div>
-    </section> -->
+    </section>
 
 
-  <section class="site-section section-signup">
+  <!-- <section class="site-section section-signup">
     <div class="row">
       <div class="twelve columns animate-on-scroll" data-scrollanimation="fadeDownIn">
         <h3 class="signup-title">Questions? Want to help out?</h3>
-        <h4 class="signup-subtitle">Just open an issue on <a href="https://github.com/nodeschool/stlouis">GitHub</a> and join the discussion.</h4>
+        <h4 class="signup-subtitle">Just open an issue on <a href="https://github.com/nodeschool/stlouis/issues">GitHub</a> and join the discussion.</h4>
           <p> If you are not on GitHub yet, create a <a href="https://github.com/join">free account</a> and check out the <a href="http://nodeschool.io/#git-it">Git-it</a> workshop. It will
           help you to get started.</p>
       </div>
     </div>
-  </section>
+  </section> -->
   </main>
   <!-- START: Site Footer -->
   <footer role="contentinfo" class="site-footer">
