--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               <span>NodeSchool</span> STL
           </div>
 
-          <p id="subheadline">Next Event: <a href="http://www.meetup.com/STL-NodeSchool/events/227914469/">Tue, February 2nd @ Pixel Press</a></p>
+          <p id="subheadline">Next Event: <a href="http://www.meetup.com/STL-NodeSchool/events/227914469/">Tue, April 19th @ Pixel Press</a></p>
 
         <div class="catch-errors-top"></div>
       </div>
